--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.scm.organisation>Activiti</project.scm.organisation>
     <project.scm.repository>Activiti</project.scm.repository>
+    <project.year>2020</project.year>
 
     <java.release>8</java.release>
     <java.version>1.${java.release}</java.version>
@@ -204,7 +205,7 @@
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
-    <maven-fluido-skin.version>1.8</maven-fluido-skin.version>
+    <maven-fluido-skin.version>1.7</maven-fluido-skin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
