--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>pom</packaging>
   <name>Activiti :: Parent</name>
   <description>${project.name}</description>
-  <url>https://www.activiti.org/</url>
+  <url>https://www.activiti.org</url>
   <inceptionYear>2010</inceptionYear>
   <organization>
     <name>Alfresco</name>
@@ -160,8 +160,8 @@
   <scm>
     <url>http://github.com/${project.scm.organisation}/${project.scm.repository}</url>
     <connection>scm:git:git://github.com/${project.scm.organisation}/${project.scm.repository}.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/${project.scm.organisation}/${project.scm.repository}.git
-    </developerConnection>
+    <developerConnection>scm:git:ssh://git@github.com/${project.scm.organisation}/${project.scm.repository}.git</developerConnection>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub</system>
@@ -205,7 +205,6 @@
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
-    <maven-fluido-skin.version>1.7</maven-fluido-skin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
@@ -224,8 +223,6 @@
     <!-- configuration properties for tests -->
     <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions</generated-assertions-folder>
     <generated-assertions-package>org.activiti.test</generated-assertions-package>
-    <!-- JVM params for test execution -->
-    <argLine>-Duser.language=en</argLine>
 
     <skipITs>true</skipITs>
   </properties>
@@ -243,6 +240,11 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+        </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
@@ -346,8 +348,6 @@
             <releaseProfiles>sign</releaseProfiles>
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <tagNameFormat>activiti-@{project.version}</tagNameFormat>
-            <!-- Necessary until keycloak releases boot2 adaptor -->
-            <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
           </configuration>
         </plugin>
         <plugin>
@@ -682,7 +682,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <version>${maven-failsafe-plugin.version}</version>
             <executions>
               <execution>
                 <id>integration-test</id>
@@ -740,10 +739,9 @@
         </plugins>
       </build>
       <distributionManagement>
-        <!--TODO this doesn't work with new deployment plugin -->
         <repository>
           <id>central-releases-staging</id>
-          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
       </distributionManagement>
     </profile>
