--- a/activiti-core-common/activiti-common-util/pom.xml
+++ b/activiti-core-common/activiti-common-util/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti.core.common</groupId>
-    <artifactId>activiti-core-common-parent</artifactId>
+    <artifactId>activiti-core-common</artifactId>
     <version>7.1.0-SNAPSHOT</version>
   </parent>
   <artifactId>activiti-common-util</artifactId>
