--- a/activiti-core/pom.xml
+++ b/activiti-core/pom.xml
@@ -8,7 +8,7 @@
     <version>7.1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.activiti</groupId>
-  <artifactId>activiti-root</artifactId>
+  <artifactId>activiti-core</artifactId>
   <packaging>pom</packaging>
   <name>Activiti :: Core :: Parent</name>
   <properties>
@@ -35,17 +35,9 @@
     <xmlgraphics-commons.version>2.2</xmlgraphics-commons.version>
     <groovy-all.version>2.5.4</groovy-all.version>
     <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
-<!--    <checkstyle.skip>true</checkstyle.skip>-->
   </properties>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.activiti.build</groupId>
-        <artifactId>activiti-dependencies-parent</artifactId>
-        <version>${project.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
@@ -205,7 +197,6 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  <!-- Activiti Build Parent Marker Dependency for Dependency Convergence Tests -->
   <dependencies>
     <dependency>
       <groupId>org.activiti.api</groupId>
@@ -221,7 +212,6 @@
     </dependency>
   </dependencies>
   <modules>
-    <module>activiti-core-dependencies-tests</module>
     <module>activiti-core-dependencies</module>
     <module>activiti-api-impl</module>
     <module>activiti-bpmn-model</module>
