--- a/activiti-examples/activiti-api-basic-connector-example/pom.xml
+++ b/activiti-examples/activiti-api-basic-connector-example/pom.xml
@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti.examples</groupId>
-    <artifactId>activiti-examples-parent</artifactId>
+    <artifactId>activiti-examples</artifactId>
     <version>7.1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>activiti-api-basic-connector-examples</artifactId>
-  <name>Activiti :: Examples :: API Basic Connector Examples</name>
+  <artifactId>activiti-api-basic-connector-example</artifactId>
+  <name>Activiti :: Examples :: API Basic Connector Example</name>
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
