--- a/activiti-examples/activiti-api-spring-integration-example/pom.xml
+++ b/activiti-examples/activiti-api-spring-integration-example/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti.examples</groupId>
-    <artifactId>activiti-examples-parent</artifactId>
+    <artifactId>activiti-examples</artifactId>
     <version>7.1.0-SNAPSHOT</version>
   </parent>
   <artifactId>activiti-api-spring-integration-example</artifactId>
