--- a/activiti-examples/pom.xml
+++ b/activiti-examples/pom.xml
@@ -8,7 +8,7 @@
     <version>7.1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.activiti.examples</groupId>
-  <artifactId>activiti-examples-parent</artifactId>
+  <artifactId>activiti-examples</artifactId>
   <packaging>pom</packaging>
   <name>Activiti :: Examples :: Parent</name>
   <modules>
