--- a/activiti-core/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -31,7 +31,7 @@
       <artifactId>activiti-api-model-shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.activiti.api</groupId>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-api-model-shared-impl</artifactId>
     </dependency>
     <dependency>
@@ -51,7 +51,7 @@
       <artifactId>activiti-api-process-model</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.activiti.api</groupId>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-api-process-model-impl</artifactId>
     </dependency>
     <dependency>
