--- a/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
@@ -3,24 +3,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.activiti.api</groupId>
-    <artifactId>activiti-api-dependencies</artifactId>
+    <groupId>org.activiti</groupId>
+    <artifactId>activiti-api-impl</artifactId>
     <version>7.1.0-SNAPSHOT</version>
-    <relativePath>../activiti-api-dependencies</relativePath>
   </parent>
-  <artifactId>activiti-api-task-model-impl</artifactId>
-  <name>Activiti :: API :: Task Model Implementation</name>
+  <artifactId>activiti-api-process-model-impl</artifactId>
+  <name>Activiti :: API :: Process Model Implementation</name>
   <dependencies>
-    <dependency>
-      <groupId>org.activiti.api</groupId>
-      <artifactId>activiti-api-task-model</artifactId>
-    </dependency>
     <dependency>
       <groupId>org.activiti.api</groupId>
       <artifactId>activiti-api-model-shared</artifactId>
     </dependency>
     <dependency>
       <groupId>org.activiti.api</groupId>
+      <artifactId>activiti-api-process-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-api-model-shared-impl</artifactId>
     </dependency>
     <dependency>
@@ -29,11 +28,11 @@
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
+      <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
+      <artifactId>jackson-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
