--- a/activiti-core/activiti-api-impl/activiti-api-runtime-shared-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/activiti-api-runtime-shared-impl/pom.xml
@@ -19,7 +19,7 @@
       <artifactId>activiti-api-model-shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.activiti.api</groupId>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-api-model-shared-impl</artifactId>
     </dependency>
     <dependency>
