share awaitility and commons-io versions

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,8 @@
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <spring-boot.version>2.1.12.RELEASE</spring-boot.version>
     <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
+    <commons-io.version>2.6</commons-io.version>
+    <awaitility.version>4.0.1</awaitility.version>
 
     <!-- configuration properties for tests -->
     <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions</generated-assertions-folder>
@@ -240,6 +242,16 @@
         <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>${awaitility.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
