--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -17,3 +17,7 @@ github:
     - name: activiti-cloud-modeling-service
       branch: develop
       useSinglePullRequest: true
+    - name: activiti-cloud-build
+      branch: develop
+      useSinglePullRequest: true
+    
