--- a/activiti-core-common/pom.xml
+++ b/activiti-core-common/pom.xml
@@ -11,6 +11,17 @@
   <artifactId>activiti-core-common</artifactId>
   <packaging>pom</packaging>
   <name>Activiti :: Core :: Common :: Parent</name>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-dependencies</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.activiti.api</groupId>
