--- a/activiti-api/activiti-api-dependencies/pom.xml
+++ b/activiti-api/activiti-api-dependencies/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti.api</groupId>
     <artifactId>activiti-api</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
   </parent>
   <artifactId>activiti-api-dependencies</artifactId>
   <packaging>pom</packaging>
