--- a/activiti-api/activiti-api-process-runtime/pom.xml
+++ b/activiti-api/activiti-api-process-runtime/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti.api</groupId>
     <artifactId>activiti-api-dependencies</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
     <relativePath>../activiti-api-dependencies</relativePath>
   </parent>
   <artifactId>activiti-api-process-runtime</artifactId>
