--- a/activiti-core-common/activiti-core-common-dependencies/pom.xml
+++ b/activiti-core-common/activiti-core-common-dependencies/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti.core.common</groupId>
     <artifactId>activiti-core-common</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
   </parent>
   <artifactId>activiti-core-common-dependencies</artifactId>
   <packaging>pom</packaging>
