--- a/activiti-core-common/activiti-spring-resource-finder/pom.xml
+++ b/activiti-core-common/activiti-spring-resource-finder/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti.core.common</groupId>
     <artifactId>activiti-core-common-dependencies</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
     <relativePath>../activiti-core-common-dependencies</relativePath>
   </parent>
   <artifactId>activiti-spring-resource-finder</artifactId>
