--- a/activiti-core/activiti-spring-conformance-tests/activiti-spring-conformance-set1/pom.xml
+++ b/activiti-core/activiti-spring-conformance-tests/activiti-spring-conformance-set1/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-spring-conformance-tests</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
   </parent>
   <artifactId>activiti-spring-conformance-set1</artifactId>
   <name>Activiti :: Spring :: Conformance Set 1</name>
