--- a/activiti-core/activiti-spring-conformance-tests/activiti-spring-conformance-util/pom.xml
+++ b/activiti-core/activiti-spring-conformance-tests/activiti-spring-conformance-util/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-spring-conformance-tests</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
   </parent>
   <artifactId>activiti-spring-conformance-util</artifactId>
   <name>Activiti :: Spring :: Conformance Util </name>
