--- a/activiti-dependency-check/pom.xml
+++ b/activiti-dependency-check/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti.build</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.190</version>
   </parent>
   <artifactId>activiti-dependency-check</artifactId>
   <packaging>pom</packaging>
