Move jar signature to deploy phase
Sources artifacts are configured to be generated at deploy phase, so jar should be signed only after that.
This is also skipping the deployment for examples and conformance tests that are not required to be deployed

Ref https://github.com/Activiti/Activiti/issues/3184

--- a/activiti-core/activiti-spring-conformance-tests/pom.xml
+++ b/activiti-core/activiti-spring-conformance-tests/pom.xml
@@ -11,6 +11,9 @@
   <artifactId>activiti-spring-conformance-tests</artifactId>
   <packaging>pom</packaging>
   <name>Activiti :: Spring :: Conformance Tests Parent</name>
+  <properties>
+    <maven.deploy.skip>true</maven.deploy.skip>
+  </properties>
   <modules>
     <module>activiti-spring-conformance-util</module>
     <module>activiti-spring-conformance-set0</module>
