--- a/pom.xml
+++ b/pom.xml
@@ -733,6 +733,7 @@
             <executions>
               <execution>
                 <id>sign-artifacts</id>
+                <phase>deploy</phase>
                 <goals>
                   <goal>sign</goal>
                 </goals>
