--- a/.travis.yml
+++ b/.travis.yml
@@ -33,15 +33,14 @@ before_script:
 # Enable integration tests
 script:
   - mvn verify -B
-  - git checkout develop
-  - mvn versions:set -DnewVersion=\$(cat VERSION)"
-  - mvn clean verify -B'
+  - mvn versions:set -DnewVersion=$(cat VERSION)
+  - mvn clean
   - git add --all"
-  - git commit -m \"Release \$(cat VERSION)\" --allow-empty"
+  - git commit -m "Release $(cat VERSION) --allow-empty
   - git tag -fa v$(cat VERSION) -m "Release version $(cat VERSION)"
   - git push origin v$(cat VERSION)"
 
-  - mvn clean deploy -DskipTests'
+  - mvn clean deploy -DskipTests
 
   - export VERSION=`cat VERSION`
   - make updatebot/push-version 
