[AAE-106] add conditional expression validation on sequence flow validator (#3134)
* [AAE-106] add conditional expression validation on sequence flow validator

* cleanup pom

--- a/activiti-core/activiti-process-validation/pom.xml
+++ b/activiti-core/activiti-process-validation/pom.xml
@@ -32,6 +32,14 @@
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>de.odysseus.juel</groupId>
+      <artifactId>juel-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>de.odysseus.juel</groupId>
+      <artifactId>juel-impl</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
