--- a/activiti-api/activiti-api-task-model/pom.xml
+++ b/activiti-api/activiti-api-task-model/pom.xml
@@ -15,5 +15,9 @@
       <groupId>org.activiti.api</groupId>
       <artifactId>activiti-api-model-shared</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.activiti.api</groupId>
+      <artifactId>activiti-api-process-model</artifactId>
+    </dependency>
   </dependencies>
 </project>
