fixed license location

--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
   </organization>
   <licenses>
     <license>
-      <name>Apache v2</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
     </license>
   </licenses>
   <developers>
